# yorimichi-map

./: .gitignore  .markdownlintrc  CLAUDE.md  CONTRIBUTING.md  ENVIRONMENT.md  LICENSE  README.md  flake.nix
.claude/: config.json  settings.json  statusline.sh  team.json
.github/: dependabot.yml
.github/workflows/: backend-ci.yml  backend.yml  ci.yml  (+7 more)
backend/: .gitignore  CLAUDE.md  README.md  flake.nix  main.py  manage.py  pyproject.toml
backend/.claude/: settings.json
backend/.github/workflows/: ci.yml  update-pr-branches.yml
backend/flakes/: default.nix  devShells.nix  packages.nix  pre-commit.nix  python.nix  treefmt.nix
backend/navigation/: apps.py  exceptions.py  serializers.py  urls.py  views.py
backend/navigation/services/: deep_link.py  gemini.py  google_maps.py
backend/tests/: test_deep_link.py  test_gemini.py  test_google_maps.py  test_integration.py  test_views.py
backend/yorimichi_map_backend/: asgi.py  settings.py  urls.py  views.py  wsgi.py
docs/: troubleshooting.md
flakes/: devShells.nix  packages.nix  pre-commit.nix  treefmt.nix
frontend/: .env.production  .gitignore  .oxfmtrc.json  CLAUDE.md  README.md  biome.json  flake.nix  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
terraform/: .gitignore  .terraform-docs.yml  .terraform.lock.hcl  CLAUDE.md  README.md  artifact-registry.tf  billing-automation.tf  budget.tf  cloud-run.tf  cloudflare.tf  domain-mapping.tf  flake.nix  generate-diagram.py  monitoring.tf  outputs.tf  provider.tf  secrets.tf  state.tf  variables.tf  versions.tf  workload-identity.tf
(+114 files in other folders)
