[project]
name = "yorimichi-map-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ty>=0.0.13",
]

[tool.ty.src]
exclude = ["yorimichi_map_backend/", "manage.py"]
